2007-02-06  Denis Washington  <denisw@svn.gnome.org>

	* shell/gnomecc.menu:
	* shell/gnomecc.directory.in: New files. Needed to fix bug #402797.
	
	* shell/control-center.c: Use gnomecc.menu instead of settings.menu.	
	
	* shell/Makefile.am: Add rules for gnomecc.directory.in.
	* po/POTFILES.in: Add gnomecc.directory.in.

2007-02-04  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: up GTK+ requirement to 2.10 (fixes #358106)

2007-02-03  Jens Granseuer  <jensgr@gmx.net>

	* capplets/about-me/Makefile.am:
	* capplets/background/Makefile.am:
	* capplets/default-applications/Makefile.am:
	* capplets/display/Makefile.am:
	* capplets/font/Makefile.am:
	* capplets/keybindings/Makefile.am:
	* capplets/keyboard/Makefile.am:
	* capplets/mouse/Makefile.am:
	* capplets/network/Makefile.am:
	* capplets/sound/Makefile.am:
	* capplets/theme-switcher/Makefile.am:
	* capplets/ui-properties/Makefile.am:
	* capplets/windows/Makefile.am: add cappletname variable which is
	used to define G_LOG_DOMAIN (fixes #380991)

2007-02-02  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: remove idl/Makefile.am from the list of config files

2007-02-02  Christian Persch  <chpe@svn.gnome.org>

	* Makefile.am:
	* capplets/about-me/Makefile.am:
	* capplets/about-me/gnome-about-me-password.c: (passdlg_init):
	* capplets/about-me/gnome-about-me.c: (about_me_setup_dialog):
	* capplets/accessibility/at-properties/Makefile.am:
	* capplets/accessibility/keyboard/Makefile.am:
	* capplets/accessibility/keyboard/accessibility-keyboard.c:
	(setup_accessX_dialog):
	* capplets/background/Makefile.am:
	* capplets/background/gnome-wp-capplet.c: (gnome_wp_create_dialog):
	* capplets/common/Makefile.am:
	* capplets/common/capplet-util.c: (capplet_set_icon):
	* capplets/default-applications/Makefile.am:
	* capplets/display/Makefile.am:
	* capplets/file-types/Makefile.am:
	* capplets/file-types/file-types-capplet.c: (create_dialog):
	* capplets/file-types/mime-category-edit-dialog.c: