@@ -1,3 +1,8 @@
+2007-02-12  Christian Persch  <chpe@svn.gnome.org>
+
+	* vfs-methods/fontilus/thumbnailer.c: (main): Use GOption argument
+	parsing here, and fix some leaks in the error paths. Bug #393994.
+
 2007-02-06  Denis Washington  <denisw@svn.gnome.org>
 
 	* shell/gnomecc.menu:
